Fixing stars-toppers so they align with rule lines

--- a/sass/_stars-topper.scss
+++ b/sass/_stars-topper.scss
@@ -7,6 +7,7 @@
 	h4 {
 		display: inline;
 		background-color: white;
+		padding: 0 4px;
 	}
 }
 
